// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography demo -- count 1`] = `
.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 12px;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-4 {
  color: #0a1633;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 12px;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-4 {
  color: #0a1633;
}

<div>
  <span>
    <span
      class=" emotion-0 emotion-1"
    >
      使用率
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-4 emotion-1"
    >
      80%
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
</div>
`;

exports[`Typography demo -- ellipsis 1`] = `
.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-28 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-10 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-28 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

<div>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      超出隐藏
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      LineEllipsis
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <div
      class="emotion-10 emotion-11"
    >
      <span
        class=" emotion-8 emotion-1"
      >
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件，帮助我们更容易地创造更加一致的用户体验。每个设计师、开发者都有自己的习惯、审美和工作方式，在 UCloud，我们希望设计师能够从重复的工作中获得解脱，与开发者合作，更敏捷地解决问题。我们希望打破设计师与开发者的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
      </span>
    </div>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      自定义气泡中文案
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <div
      class="emotion-10 emotion-11"
    >
      <span
        class=" emotion-8 emotion-1"
      >
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件，帮助我们更容易地创造更加一致的用户体验。每个设计师、开发者都有自己的习惯、审美和工作方式，在 UCloud，我们希望设计师能够从重复的工作中获得解脱，与开发者合作，更敏捷地解决问题。我们希望打破设计师与开发者的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
      </span>
    </div>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      LineEllipsis 自定义宽度
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <div
      class="emotion-10 emotion-11"
      style="width:400px"
    >
      <span
        class=" emotion-8 emotion-1"
      >
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件，帮助我们更容易地创造更加一致的用户体验。每个设计师、开发者都有自己的习惯、审美和工作方式，在 UCloud，我们希望设计师能够从重复的工作中获得解脱，与开发者合作，更敏捷地解决问题。我们希望打破设计师与开发者的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
        <svg
          class=" emotion-28 emotion-29"
          viewBox="0 0 24 24"
        >
          <path
            d="M19.23 5.52a1 1 0 011.62 1.16l-.08.11-9.93 12.07a1 1 0 01-1.33.19l-.1-.05-6.07-5.38A1 1 0 014.56 12l.1.08L10 16.79z"
          />
        </svg>
      </span>
    </div>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <br />
  <br />
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      TextEllipsis
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组...
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      截断方向可选择从前或从后
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        ...的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      超过字符数量限制后默认出 tip，未超过限制不出 tip
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组...
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      自定义省略号字符
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组~~~
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      basedOn 截断基准，如果不设置，则根据字符自动判断
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        React makes it painless to create interactive UIs. Design simple...
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-0 emotion-1"
    >
      fromEnd
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <span
      class=" emotion-8 emotion-1"
    >
      <div>
        ...and render just the right components when your data changes.
      </div>
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
</div>
`;

exports[`Typography demo -- interaction 1`] = `
Array [
  .emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-5 {
  cursor: pointer;
  color: #3860f4;
  position: relative;
}

.emotion-5 svg {
  fill: currentColor;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 14px;
  height: 14px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-5 {
  cursor: pointer;
  color: #3860f4;
  position: relative;
}

.emotion-5 svg {
  fill: currentColor;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 14px;
  height: 14px;
}

<span>
    <span
      class=" emotion-0 emotion-1"
    >
      UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件
    </span>
    <span
      class=" emotion-5 emotion-6"
    >
      <svg
        class=" emotion-2 emotion-3 emotion-4"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 3a1 1 0 011 1v4h4a1 1 0 011 1v11a1 1 0 01-1 1H9a1 1 0 01-1-1v-4H4a1 1 0 01-1-1V4a1 1 0 011-1h11zm4 7h-3v5a1 1 0 01-1 1h-5v3h9v-9zm-5-5H5v9h3V9a1 1 0 011-1h5V5zm0 5h-4v4h4v-4z"
        />
      </svg>
    </span>
    <span
      class=" emotion-7 emotion-8"
    />
  </span>,
  <br />,
  .emotion-5 {
  cursor: pointer;
  color: #3860f4;
  position: relative;
}

.emotion-5 svg {
  fill: currentColor;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 14px;
  height: 14px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-5 {
  cursor: pointer;
  color: #3860f4;
  position: relative;
}

.emotion-5 svg {
  fill: currentColor;
}

.emotion-3 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 14px;
  height: 14px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

<span>
    <span
      class=" emotion-0 emotion-1"
    >
      UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件
    </span>
    <span
      class=" emotion-5 emotion-6"
    >
      <svg
        class=" emotion-2 emotion-3 emotion-4"
        viewBox="0 0 24 24"
      >
        <path
          d="M15 3a1 1 0 011 1v4h4a1 1 0 011 1v11a1 1 0 01-1 1H9a1 1 0 01-1-1v-4H4a1 1 0 01-1-1V4a1 1 0 011-1h11zm4 7h-3v5a1 1 0 01-1 1h-5v3h9v-9zm-5-5H5v9h3V9a1 1 0 011-1h5V5zm0 5h-4v4h4v-4z"
        />
      </svg>
    </span>
    <span
      class=" emotion-7 emotion-8"
    />
  </span>,
  <br />,
  .emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-2 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  fill: #3860f4;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-2 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  fill: #3860f4;
  width: 12px;
  height: 12px;
}

<span>
    <span
      class=" emotion-0 emotion-1"
    >
      UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件
    </span>
    <span
      class=" emotion-4 emotion-5"
    >
      <svg
        class=" emotion-2 emotion-3"
        color="#3860f4"
        style="cursor:pointer"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>,
  <br />,
  .emotion-2 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-0:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-0 {
  color: #0a1633;
  cursor: pointer;
}

a.emotion-0:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-4:hover {
  color: #3357df;
}

.emotion-2 {
  -webkit-transition: fill 0.3s,width 0.3s,height 0.3s;
  transition: fill 0.3s,width 0.3s,height 0.3s;
  display: inline-block;
  vertical-align: middle;
  fill: currentcolor;
  width: 12px;
  height: 12px;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-0:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-0 {
  color: #0a1633;
  cursor: pointer;
}

a.emotion-0:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-4:hover {
  color: #3357df;
}

<span>
    <span
      class=" emotion-0 emotion-1"
    >
      UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件
    </span>
    <span
      class=" emotion-4 emotion-5"
    >
      <svg
        class=" emotion-2 emotion-3"
        style="cursor:pointer"
        viewBox="0 0 24 24"
      >
        <path
          d="M12,2 C6.47727273,2 2,6.47727273 2,12 C2,17.5227273 6.47727273,22 12,22 C17.5227273,22 22,17.5227273 22,12 C22,6.47727273 17.5227273,2 12,2 Z M11,5.8988764 C11,5.40449438 11.45,5 12,5 C12.55,5 13,5.40449438 13,5.8988764 L13,14.1011236 C13,14.5955056 12.55,15 12,15 C11.45,15 11,14.5955056 11,14.1011236 L11,5.8988764 Z M12,18 C11.452381,18 11,17.547619 11,17 C11,16.452381 11.452381,16 12,16 C12.547619,16 13,16.452381 13,17 C13,17.547619 12.5714286,18 12,18 Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </span>,
]
`;

exports[`Typography demo -- other 1`] = `
.emotion-108 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-108 {
  color: #0a1633;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-22 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-22:hover {
  color: #3357df;
}

.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: #cccccc;
  cursor: default;
}

.emotion-8:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

a.emotion-8 {
  color: #cccccc;
  cursor: default;
}

a.emotion-8:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.emotion-20 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-20:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-20 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-20:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-24 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: Consolas,Monaco,monospace;
  white-space: pre-wrap;
}

.emotion-28 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
}

.emotion-36 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #ffffff;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-36 {
  color: #ffffff;
}

.emotion-44 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-48 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 14px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-52 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 16px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-56 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 18px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-60 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 20px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-64 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-68 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 28px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-72 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 32px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-76 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-80 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-88 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-88 {
  color: #0a1633;
}

.emotion-92 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-92 {
  color: #0a1633;
}

.emotion-96 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-96 {
  color: #0a1633;
}

.emotion-100 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 18px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-100 {
  color: #0a1633;
}

.emotion-104 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 20px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-104 {
  color: #0a1633;
}

.emotion-112 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 28px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-112 {
  color: #0a1633;
}

.emotion-116 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 32px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-116 {
  color: #0a1633;
}

.emotion-120 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
  text-transform: none;
}

.emotion-120:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-120 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-120:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-128 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #7a8baa;
  font-size: 12px;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-128:first-letter {
  text-transform: uppercase;
}

a.emotion-128 {
  color: #7a8baa;
}

.emotion-132 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-132 {
  color: #0a1633;
}

.emotion-136 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-136 {
  color: #0a1633;
}

.emotion-108 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-108 {
  color: #0a1633;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-22 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-22:hover {
  color: #3357df;
}

.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: #cccccc;
  cursor: default;
}

.emotion-8:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

a.emotion-8 {
  color: #cccccc;
  cursor: default;
}

a.emotion-8:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

.emotion-20 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-20:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-20 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-20:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-24 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: Consolas,Monaco,monospace;
  white-space: pre-wrap;
}

.emotion-28 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
}

.emotion-36 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #ffffff;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-36 {
  color: #ffffff;
}

.emotion-44 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-48 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 14px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-52 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 16px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-56 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 18px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-60 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 20px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-64 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 24px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-68 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 28px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-72 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  font-size: 32px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-76 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-80 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: inherit;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-88 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-88 {
  color: #0a1633;
}

.emotion-92 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-92 {
  color: #0a1633;
}

.emotion-96 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-96 {
  color: #0a1633;
}

.emotion-100 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 18px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-100 {
  color: #0a1633;
}

.emotion-104 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 20px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-104 {
  color: #0a1633;
}

.emotion-112 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 28px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-112 {
  color: #0a1633;
}

.emotion-116 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 32px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  font-family: "Open Sans",sans-serif;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  text-transform: none;
}

a.emotion-116 {
  color: #0a1633;
}

.emotion-120 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
  text-transform: none;
}

.emotion-120:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-120 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-120:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-128 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #7a8baa;
  font-size: 12px;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-128:first-letter {
  text-transform: uppercase;
}

a.emotion-128 {
  color: #7a8baa;
}

.emotion-132 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.5;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-132 {
  color: #0a1633;
}

.emotion-136 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-136 {
  color: #0a1633;
}

<div>
  <div>
    <span>
      <h3
        class=" emotion-0 emotion-1"
      >
        Text
      </h3>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <span>
      <span
        class=" emotion-4 emotion-1"
      >
        文本
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-8 emotion-1"
      >
        禁用文本
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-12 emotion-1"
      >
        加粗文本
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-16 emotion-1"
      >
        删除线
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-20 emotion-1"
      >
        链接
      </span>
      <span
        class=" emotion-22 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-24 emotion-1"
      >
        等宽字体，常用于显示代码/Monospaced Font
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-28 emotion-1"
      >
        展示数字，如价格：100,000,000,000元
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
  </div>
  <div>
    <span>
      <h3
        class=" emotion-0 emotion-1"
      >
        Text bright
      </h3>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <div
      style="padding:0 10px;background:#000"
    >
      <span>
        <span
          class=" emotion-36 emotion-1"
        >
          Udesign(bright)
        </span>
        <span
          class=" emotion-2 emotion-3"
        />
      </span>
    </div>
    <br />
  </div>
  <div>
    <span>
      <h3
        class=" emotion-0 emotion-1"
      >
        Text 字号
      </h3>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <span>
      <span
        class=" emotion-44 emotion-1"
      >
        t1号文本：一般用于备注/正文，是浏览器识别的最小字号
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-48 emotion-1"
      >
        t2号文本：一般用于正文或者小标题
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-52 emotion-1"
      >
        t3号文本：一般用于标题
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-56 emotion-1"
      >
        t4号文本：一般用于标题
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-60 emotion-1"
      >
        t5号文本：一般用于标题，或者特殊场景下的文本展示
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-64 emotion-1"
      >
        t6文本：一般用于标题，或者特殊场景下的文本展示
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-68 emotion-1"
      >
        t7文本：一般用于标题，或者特殊场景下的文本展示
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-72 emotion-1"
      >
        t8文本：一般用于标题，或者特殊场景下的文本展示
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
  </div>
  <div>
    <h3>
      Text 行高
    </h3>
    <span>
      <div
        class=" emotion-76 emotion-1"
      >
        密集的行高，字号1.3倍
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <div
        class=" emotion-80 emotion-1"
      >
        中等的行高，字号1.5倍
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <div
        class=" emotion-4 emotion-1"
      >
        宽松的行高，字号1.7倍
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-88 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-92 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-96 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-100 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-104 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-108 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-112 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-116 emotion-1"
      >
        1,000
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <a
        class=" emotion-120 emotion-1"
        href="https://www.ucloud.cn/"
        rel="noopener"
        target="_blank"
      >
        前往官网
      </a>
      <span
        class=" emotion-22 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-120 emotion-1"
      >
        点击事件
      </span>
      <span
        class=" emotion-22 emotion-3"
      />
    </span>
    <br />
    <span>
      <span
        class=" emotion-128 emotion-1"
      >
        备注文本
      </span>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <div
        class=" emotion-132 emotion-1"
      >
        小副标题
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <span>
      <div
        class=" emotion-136 emotion-1"
      >
        大副标题
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
  </div>
</div>
`;

exports[`Typography demo -- paragraph 1`] = `
.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 14px;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
}

a.emotion-16 {
  color: #526075;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-4:first-letter {
  text-transform: uppercase;
}

a.emotion-4 {
  color: #526075;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 12px;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-12:first-letter {
  text-transform: uppercase;
}

a.emotion-12 {
  color: #526075;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 14px;
  line-height: 1.5;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: none;
}

a.emotion-16 {
  color: #526075;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 12px;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-4:first-letter {
  text-transform: uppercase;
}

a.emotion-4 {
  color: #526075;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  font-size: 12px;
  line-height: 1.3;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-12:first-letter {
  text-transform: uppercase;
}

a.emotion-12 {
  color: #526075;
}

<span>
  <div
    class=" emotion-16 emotion-1"
  >
    <span>
      <h3
        class=" emotion-0 emotion-1"
      >
        常规
      </h3>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <span>
      <div
        class=" emotion-4 emotion-1"
      >
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件，帮助我们更容易地创造更加一致的用户体验。每个设计师、开发者都有自己的习惯、审美和工作方式，在 UCloud，我们希望设计师能够从重复的工作中获得解脱，与开发者合作，更敏捷地解决问题。我们希望打破设计师与开发者的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <br />
    <span>
      <h3
        class=" emotion-0 emotion-1"
      >
        紧凑
      </h3>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
    <span>
      <div
        class=" emotion-12 emotion-1"
      >
        UCloud Design 是一个设计系统，它定义了一套企业级中后台设计与前端基础组件，帮助我们更容易地创造更加一致的用户体验。每个设计师、开发者都有自己的习惯、审美和工作方式，在 UCloud，我们希望设计师能够从重复的工作中获得解脱，与开发者合作，更敏捷地解决问题。我们希望打破设计师与开发者的隔阂，让大家的协同变得更流畅和高效。因此，我们打造了 UCloud Design。
      </div>
      <span
        class=" emotion-2 emotion-3"
      />
    </span>
  </div>
  <span
    class=" emotion-2 emotion-3"
  />
</span>
`;

exports[`Typography demo -- text 1`] = `
.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-4 {
  color: #0a1633;
}

.emotion-38 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-38:hover {
  color: #3357df;
}

.emotion-36 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-36:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-36 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-36:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #526075;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #7a8baa;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-12 {
  color: #7a8baa;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: rgba(10,22,51,0.2);
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-16 {
  color: rgba(10,22,51,0.2);
}

.emotion-20 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: #cccccc;
  cursor: default;
}

.emotion-20:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

a.emotion-20 {
  color: #3860f4;
  color: #cccccc;
  cursor: default;
}

a.emotion-20:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #15AD31;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-24 {
  color: #15AD31;
}

.emotion-28 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #ffc42e;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-28 {
  color: #ffc42e;
}

.emotion-32 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #f44336;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-32 {
  color: #f44336;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-4 {
  color: #0a1633;
}

.emotion-38 {
  cursor: pointer;
  color: #c3cad9;
}

.emotion-38:hover {
  color: #3357df;
}

.emotion-36 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  cursor: pointer;
}

.emotion-36:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

a.emotion-36 {
  color: #3860f4;
  cursor: pointer;
}

a.emotion-36:hover {
  color: #3357df;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #526075;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-0 {
  color: #526075;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #7a8baa;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-12 {
  color: #7a8baa;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: rgba(10,22,51,0.2);
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-16 {
  color: rgba(10,22,51,0.2);
}

.emotion-20 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #3860f4;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  color: #cccccc;
  cursor: default;
}

.emotion-20:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

a.emotion-20 {
  color: #3860f4;
  color: #cccccc;
  cursor: default;
}

a.emotion-20:hover {
  color: #cccccc;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-24 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #15AD31;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-24 {
  color: #15AD31;
}

.emotion-28 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #ffc42e;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-28 {
  color: #ffc42e;
}

.emotion-32 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #f44336;
  line-height: 1.7;
  font-weight: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

a.emotion-32 {
  color: #f44336;
}

<div>
  <span>
    <span
      class=" emotion-0 emotion-1"
    >
      Udesign(default)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-4 emotion-1"
    >
      Udesign(dark)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-0 emotion-1"
    >
      Udesign(light)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-12 emotion-1"
    >
      Udesign(remark)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-16 emotion-1"
    >
      Udesign(remark_light)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-20 emotion-1"
    >
      Udesign(disabled)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-24 emotion-1"
    >
      Udesign(success)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-28 emotion-1"
    >
      Udesign(warning)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-32 emotion-1"
    >
      Udesign(error)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-36 emotion-1"
    >
      Udesign(link)
    </span>
    <span
      class=" emotion-38 emotion-3"
    />
  </span>
  <br />
  <span>
    <span
      class=" emotion-4 emotion-1"
    >
      Udesign(code)
    </span>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <br />
</div>
`;

exports[`Typography demo -- title 1`] = `
.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-8 {
  color: #0a1633;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 20px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-4 {
  color: #0a1633;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-12 {
  color: #0a1633;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-16 {
  color: #0a1633;
}

.emotion-8 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 16px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-8 {
  color: #0a1633;
}

.emotion-0 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 24px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-0 {
  color: #0a1633;
}

.emotion-4 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 20px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-4 {
  color: #0a1633;
}

.emotion-12 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 14px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-12 {
  color: #0a1633;
}

.emotion-16 {
  margin: auto;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue","Arial","PingFang SC","Hiragino Sans GB","Noto Sans","Microsoft Yahei",sans-serif;
  opacity: 1;
  color: #0a1633;
  font-size: 12px;
  line-height: 1.7;
  font-weight: 600;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  text-transform: capitalize;
}

a.emotion-16 {
  color: #0a1633;
}

<div>
  <span>
    <h1
      class=" emotion-0 emotion-1"
    >
      h1.Udesign
    </h1>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h2
      class=" emotion-4 emotion-1"
    >
      h2.Udesign
    </h2>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h3
      class=" emotion-8 emotion-1"
    >
      h3.Udesign
    </h3>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h4
      class=" emotion-12 emotion-1"
    >
      h4.Udesign
    </h4>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
  <span>
    <h5
      class=" emotion-16 emotion-1"
    >
      h5.Udesign
    </h5>
    <span
      class=" emotion-2 emotion-3"
    />
  </span>
</div>
`;
